fixed body width to align with full bleed

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,7 +1,7 @@
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 
-	.site {
+	.site, .site-main {
 		background-color: transparent;
 		max-width: em(1200);
 		margin: 0 auto;
